--- a/lab5/styles.css
+++ b/lab5/styles.css
@@ -21,10 +21,10 @@ body {
     width: 200px;
     height: 150px;
     object-fit: cover;
-    transition: transform 0.2s;
+    transition: transform 0.2s, z-index 0.2s;
 }
 
 .photo-container img.zoomed {
     transform: scale(1.5);
+    z-index: 10;
 }
-
