--- a/lab7/styles.css
+++ b/lab7/styles.css
@@ -25,9 +25,10 @@ img {
     height: auto;
 }
 
-h2 { color:black;
-text-align:center;
+h2 {
+    color:black;
+    text-align:center;
 }
 h3 { 
-text-align:center;
+     text-align:center;
 }
